--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -2,8 +2,54 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:pageTransitions="clr-namespace:WpfPageTransitions;assembly=WpfPageTransitions"
-        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen" WindowState="Maximized" Topmost="True">
-
+        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" Icon="Logo.ico" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style x:Key="BaseButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="BorderBrush" Value="#cccccc"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Foreground" Value="#333333"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="16,3,16,3"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="Chrome"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                SnapsToDevicePixels="true">
+                            <ContentPresenter Name="Presenter" Margin="{TemplateBinding Padding}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    RecognizesAccessKey="True"
+                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="#333333" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#dddddd" />
+                                <Setter Property="BorderBrush" Value="#cccccc" />
+                                <Setter Property="Foreground" Value="#333333" />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="#1ba1e2" />
+                                <Setter Property="BorderBrush" Value="#1ba1e2"/>
+                                <Setter Property="Foreground" Value="#ffffff"/>
+                            </Trigger>
+                            <Trigger Property="IsFocused" Value="true">
+                                <Setter TargetName="Chrome" Property="BorderBrush" Value="#1ba1e2" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
 
     <Grid Margin="0,0,0.2,1.2">
         <Grid.ColumnDefinitions>
@@ -22,7 +68,7 @@
                     </LinearGradientBrush>
                 </Grid.Background>
                 <!--<pageTransitions:PageTransition Name="pageTransitionControl"  Margin="25"  />-->
-                <pageTransitions:PageTransition Name="pageTransitionControl" Margin="0,82,30,-52" />
+                <pageTransitions:PageTransition Name="pageTransitionControl" Margin="10,10,30,20" />
             </Grid>
             <!--<Border.BorderBrush>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -48,11 +94,26 @@
         <Label x:Name="cboDate"  Height="33" HorizontalAlignment="Left" Margin="1004,52,0,0" VerticalAlignment="Top" FontSize="16" Width="166" FontWeight="SemiBold" Content="20 December 2015" />
         <Label  Height="33" HorizontalAlignment="Left" Margin="1151,52,0,0" VerticalAlignment="Top" FontSize="16" Width="62" FontWeight="Bold" Content="Time:"/>
         <Label x:Name="lbTime"  Height="33" HorizontalAlignment="Left" Margin="1209,52,-5.6,0" VerticalAlignment="Top" FontSize="16" Width="123" FontWeight="SemiBold" Content="20:33:55" />
-        <Button x:Name="btnNewClient" Content="New Client" HorizontalAlignment="Left" Margin="108,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnNewClient_Click"/>
-        <Button x:Name="btnFollowUp" Content="Follow-Up Visit" HorizontalAlignment="Left" Margin="437,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnFollowUp_Click"/>
-        <Button x:Name="btnScreening" Content="Screening" HorizontalAlignment="Left" Margin="276,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="btnScreening_Click" RenderTransformOrigin="0.485,-0.165"/>
-        <Button x:Name="button_Copy2" Content="Clinic Visit" HorizontalAlignment="Left" Margin="609,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16" Click="button_Copy2_Click"/>
-        <Button x:Name="button_Copy3" Content="Household Info" HorizontalAlignment="Left" Margin="773,47,0,0" VerticalAlignment="Top" Width="141" Height="34" FontSize="16"/>
+        <Grid HorizontalAlignment="Left" Margin="108,27,0,0" Width="841" VerticalAlignment="Top" Height="61">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+
+            </Grid.ColumnDefinitions>
+
+
+
+            <Button x:Name="btnNewClient" Style="{StaticResource BaseButtonStyle}" Content="New Client" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Bottom" Width="141" Height="34" FontSize="16" Click="btnNewClient_Click" Grid.Column="0"/>
+            <Button x:Name="btnFollowUp" Style="{StaticResource BaseButtonStyle}" Content="Follow-Up Visit" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Bottom" Width="141" Height="34" FontSize="16" Click="btnFollowUp_Click" Grid.Column="2" />
+            <Button x:Name="btnScreening" Style="{StaticResource BaseButtonStyle}" Content="Screening" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Bottom" Width="141" Height="34" FontSize="16" Click="btnScreening_Click" RenderTransformOrigin="0.485,-0.165" Grid.Column="1" />
+            <Button x:Name="button_Copy2" Style="{StaticResource BaseButtonStyle}" Content="Clinic Visit" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Bottom" Width="141" Height="34" FontSize="16" Click="button_Copy2_Click" Grid.Column="3" />
+            <Button x:Name="button_Copy3" Style="{StaticResource BaseButtonStyle}" Content="Household Info" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Bottom" Width="141" Height="34" FontSize="16" Grid.Column="4"/>
+
+
+        </Grid>
         <Menu HorizontalAlignment="Left" Height="22" VerticalAlignment="Top" Width="1328" Margin="0,0,-0.2,0" Name="mnuMain">
             <MenuItem Header="Home" Name="HomePage" Click="HomePage_Click_1"/>
             <MenuItem Header="CHOW">
