--- a/Impilo App/Views/Reports/Format2Report.xaml
+++ b/Impilo App/Views/Reports/Format2Report.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Margin="-87,-150,-910,-290">
-        <Grid Margin="94,80,-57,-164">
+             d:DesignHeight="500" d:DesignWidth="1100">
+    <Grid >
+        <Grid Margin="0">
             <Border BorderThickness="8" Height="458" HorizontalAlignment="Left" Margin="0,2,0,21" x:Name="border1" VerticalAlignment="Top" Width="1033" CornerRadius="10" Grid.ColumnSpan="3">
                 <!--<Border.Background>
                             <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
