--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:pageTransitions="clr-namespace:WpfPageTransitions;assembly=WpfPageTransitions"
-        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen" WindowState="Maximized" Topmost="True">
+        Title="Impilo Client Management System" Height="750" Width="1334.6" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="Images/Logo2.png">
 
 
     <Grid Margin="0,0,0.2,1.2">
@@ -42,8 +42,6 @@
         <!--<Image Height="50" HorizontalAlignment="Left" Margin="741,12,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="347"  Grid.Column="1" />-->
         <Image Height="65" HorizontalAlignment="Left" Margin="12,22,0,0" Name="image2" Stretch="Fill" VerticalAlignment="Top" Width="85" Source="/Images/Logo2.png" />
         <!--<Image Height="20" HorizontalAlignment="Left" Margin="761,84,0,0" Name="image3" Stretch="Fill" VerticalAlignment="Top" Width="327"  Grid.Column="1" />-->
-        <Label  Height="33" HorizontalAlignment="Left" Margin="954,21,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold">Loggged in:</Label>
-        <Label  Height="33" HorizontalAlignment="Left" Margin="1058,21,0,0" VerticalAlignment="Top" FontSize="16" Width="241"  FontWeight="SemiBold" Content="Nomonde Khoza"/>
         <Label  Height="33" HorizontalAlignment="Left" Margin="954,52,0,0" VerticalAlignment="Top" FontSize="16" Width="60" FontWeight="Bold" Content="Date:"/>
         <Label x:Name="cboDate"  Height="33" HorizontalAlignment="Left" Margin="1004,52,0,0" VerticalAlignment="Top" FontSize="16" Width="166" FontWeight="SemiBold" Content="20 December 2015" />
         <Label  Height="33" HorizontalAlignment="Left" Margin="1151,52,0,0" VerticalAlignment="Top" FontSize="16" Width="62" FontWeight="Bold" Content="Time:"/>
